# robot_properties_solo

./: .gitignore  CMakeLists.txt  license.txt  package.xml  readme.md  setup.cfg  setup.py
config/: dgm_parameters.yaml  dgm_parameters_solo12.yaml  dgm_parameters_solo8.yaml  dgm_parameters_solo8ti.yaml  quadruped.yaml
config/kino_dyn_planner/: cfg_quadruped_dance_solo12.yaml  cfg_quadruped_fast_long_trot.yaml  cfg_quadruped_fast_trot.yaml  cfg_quadruped_jump.yaml  cfg_quadruped_long_trot.yaml  cfg_quadruped_slow_trot.yaml  cfg_quadruped_standing.yaml  cfg_quadruped_standing_long.yaml  cfg_quadruped_super_long_trot.yaml  cfg_quadruped_trot.yaml  cfg_quadruped_trot_inplace.yaml  cfg_quadruped_trot_inplace_solo12.yaml
demos/: demo_display_solo.py  demo_display_solo12.py  demo_display_solo12_meshcat.py  demo_display_solo8.py  demo_display_solo8_meshcat.py  demo_simulate_solo12.py  demo_simulate_solo12_fixed_base.py  demo_simulate_solo8.py  demo_simulate_solo8_fixed_base.py  demo_solo12_collision_detection.py  display_solo.py  display_solo12.py  solo12_collision_detection.py
launch/: quadruped_bringup.launch  quadruped_dashboard.launch  quadruped_rviz.launch  rviz.launch
meshes/stl/solo12/: solo_12_base.stl
nodes/: gepetto_gui_visualization  rviz_visualization
python/robot_properties_solo/: config.py  gepetto_gui_loader.py  quadruped12wrapper.py  solo8wrapper.py
resource/dynamic_graph_manager/: dgm_parameters_solo12.yaml
resource/launch/: bringup.launch  visual_rviz.launch
resource/pre_generated_urdf/: plane_with_restitution.urdf  solo.urdf  solo12.urdf
resource/xacro/: solo.urdf.xacro
rqt/: quadruped.perspective  solo.perspective  solo.perspective.in
rviz/: dgbullet_vs_pybullet.rviz  quadruped.rviz  solo.rviz
scripts/: gepetto_gui_visualization  rviz_visualization
src/py_robot_properties_hopper/: sot_torque_control_config.py
src/py_robot_properties_quadruped/: config.py  gepetto_gui_loader.py  sot_torque_control_config.py
src/robot_properties_solo/: __init__.py  config.py  gepetto_gui_loader.py  quadruped12wrapper.py  resources.py  solo12wrapper.py  solo8wrapper.py  utils.py
src/robot_properties_solo/resources/: impedance_ctrl.yaml
src/robot_properties_solo/resources/dynamic_graph_manager/: dgm_parameters_solo12.yaml  dgm_parameters_solo12_mpi_is.yaml  dgm_parameters_solo12_nyu.yaml  dgm_parameters_solo12_wireless_mpi_is.yaml
src/robot_properties_solo/resources/launch/: dashboard.launch
src/robot_properties_solo/resources/odri_control_interface/: solo12_driver.yaml
src/robot_properties_solo/resources/pre_generated_urdf/: readme.md
src/robot_properties_solo/resources/xacro/: leg.xacro  plane_with_restitution.urdf.xacro  solo12.urdf.xacro  solo8.urdf.xacro
src/robot_properties_solo/robot_properties_solo/: __init__.py  impedance_ctrl.yaml
src/robot_properties_solo/robot_properties_solo/dynamic_graph_manager/: dgm_parameters_solo12.yaml  dgm_parameters_solo12_mpi_is.yaml  dgm_parameters_solo12_nyu.yaml  dgm_parameters_solo8.yaml  dgm_parameters_solo8ti.yaml
src/robot_properties_solo/robot_properties_solo/pre_generated_urdf/: plane_with_restitution.urdf  solo12.urdf  solo8.urdf
src/robot_properties_solo/robot_properties_solo/rqt/: solo.perspective.in
src/robot_properties_solo/robot_properties_solo/rviz/: display.rviz
src/robot_properties_solo/robot_properties_solo/xacro/: leg.xacro  plane_with_restitution.urdf.xacro
urdf/: leg  plane_with_restitution.urdf  quadruped_old.urdf  quadruped_visual.urdf
urdf/quadruped/: meshes
xacro/: leg.xacro  plane_with_restitution.urdf.xacro  quadruped.urdf.xacro  quadruped_old.urdf.xacro  quadruped_visual.urdf.xacro  solo.urdf.xacro  solo12.urdf.xacro  solo_old.urdf.xacro
