<?xml version="1.0"?>
<package>
  <name>robot_properties_quadruped</name>
  <version>1.0.0</version>
  <description>robot_properties_quadruped</description>
  <author email="mnaveau@tuebingen.mpg.de">Maximilien Naveau</author>
  <maintainer email="mnaveau@tuebingen.mpg.de">Maximilien Naveau</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
